@startuml

package domain{

   class SensorFactory {
        'Methods'
        +createSensor(model: String, catalogue: Catalogue): Sensor
        }

        class SensorTypeFactory {
        'Methods'
        +createSensorType(strDescription: String, unit: Unit): SensorType
        }

    class CatalogueSensor{
    'Attributes'
    - _listSensorTypes: List<SensorType>
    - _listStringClassesSensors: List<String>

    'Methods'
    +CatalogueSensor(filePathname: String)
    -setListSensorTypes(): void
    -setListStringClassesSensors(): void
    }

    class SensorType {

    }

     interface Sensor{
        'Methods'
        getSensorType(): SensorType
        getValue(): Value
        }

        interface Value{
        }
}

package sensors{

 class AveragePowerConsumptionSensorValue{
 'Attributes'
 - _value: double

 'Methods'
 +AveragePowerConsumptionSensorValue(dValue: double)
 -setValue(dValue: double): void
 +getValue(): double
 +toString(): String
 }
    class AveragePowerConsumptionSensor {
        - _sensorType: SensorType
        - _powerConsumptions: HashMap<LocalDateTime, Double>
        - _averagePowerConsumptionSensorValue: AveragePowerConsumptionSensorValue
        - _dValue: Double
        + AveragePowerConsumptionSensor(catalogue: CatalogueSensor) throws InstantiationException
        + setSensorType(catalogue: CatalogueSensor) throws InstantiationException
        + getAverageValue(initialTime: LocalDateTime, finalTime: LocalDateTime): Double
        + filterPowerConsumptionsByTime(initialTime: LocalDateTime, finalTime: LocalDateTime): HashMap<LocalDateTime, Double>
        + addReading(readTime: LocalDateTime, reading: Double): Double
        + getValue(): AveragePowerConsumptionSensorValue
        + getValue(initialTime: LocalDateTime, finalTime: LocalDateTime): AveragePowerConsumptionSensorValue
    }
}


SensorFactory "1" --> "1" AveragePowerConsumptionSensor : <<creates>>
AveragePowerConsumptionSensor "1" --> "1" SensorType : <<has>>
AveragePowerConsumptionSensor "1" --> "1" AveragePowerConsumptionSensorValue : <<uses>>
AveragePowerConsumptionSensor "1" ..|> "1" Sensor: <<implements>>

CatalogueSensor "1" --> "1" AveragePowerConsumptionSensor : <<has>>
CatalogueSensor "1" --> "*" SensorType : <<uses>>
AveragePowerConsumptionSensorValue "1" ..|> "1" Value: <<implements>>
SensorTypeFactory "1" --> "1" SensorType : <<creates>>


@enduml

